# quant-engine

./: .gitignore  LICENSE  PLAN.md  README.md  SPY_MA_Crossover_trades.csv  pyproject.toml
.github/workflows/: ci.yml
notebooks/: research.ipynb
src/quant_engine/: __init__.py  cli.py  config.py  runner.py
src/quant_engine/analyzers/: __init__.py  equity.py  tearsheet.py  trades.py
src/quant_engine/data/: __init__.py  cache.py  feed.py  fetch.py
src/quant_engine/optimize/: __init__.py  grid.py  walkforward.py
src/quant_engine/risk/: __init__.py  sizer.py  stops.py
src/quant_engine/strategies/: __init__.py  base.py  buy_and_hold.py  donchian_breakout.py  rsi_meanrev.py  sma_cross.py
src/quant_engine/universe/: __init__.py  lists.py
strategies_configs/: sma_cross.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_optimize.py  test_runner.py  test_walkforward.py
